# ircd-rs

./: Cargo.toml  config-dev-1.yaml  develop.sh  lessons.md
components/channel/: Cargo.toml  channel_thread.rs  directory_thread.rs  lib.rs
components/channel_traits/: Cargo.toml  channel_thread.rs  directory_thread.rs  error.rs  lib.rs
components/core/: Cargo.toml  lib.rs
components/net/: Cargo.toml  lib.rs  linefsm.rs  user.rs  writer_thread.rs
components/net_traits/: Cargo.toml  error.rs  lib.rs  linefsm.rs  writer_thread.rs
components/server/: Cargo.toml  config_thread.rs  lib.rs  server_thread.rs  virtual_user.rs  virtual_user_thread.rs
components/server_traits/: Cargo.toml  config_thread.rs  error.rs  lib.rs  server_thread.rs  virtual_user_thread.rs
components/user/: Cargo.toml  error.rs  lib.rs  user_thread.rs
components/user_traits/: Cargo.toml  error.rs  lib.rs  user_thread.rs
components/util/: Cargo.toml  lib.rs  lprintln.rs  mpsc.rs  timer.rs
src/: main.rs
