[package]
name = "user"
version = "0.0.1"
authors = []

[lib]
name = "user"
path = "lib.rs"

[dependencies]
user_traits = { path = "../user_traits" }
util = { path = "../util" }
net_traits = { path = "../net_traits" }
channel_traits = { path = "../channel_traits" }
server = { path = "../server" }
server_traits = { path = "../server_traits" }
